[gd_scene load_steps=3 format=3 uid="uid://b4fcs0iuge7cl"]

[ext_resource type="FontFile" uid="uid://bc223e3sfn1ei" path="res://assets/Fonts/Kenney Pixel.ttf" id="1_dy7ph"]
[ext_resource type="Script" uid="uid://bnqn6x18gigqn" path="res://scenes/SceneManager/setting_screen.gd" id="1_we8nn"]

[node name="SettingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_we8nn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14338842, 0.20589367, 0.3554784, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -37.0
offset_right = 43.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dy7ph")
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicBar" type="HScrollBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 20.0
value = 10.0

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_dy7ph")
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXBar" type="HScrollBar" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 20.0
value = 10.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_dy7ph")
text = "Back"
